--- a/GitHubRepoSearch/app/src/main/res/layout/activity_main.xml
+++ b/GitHubRepoSearch/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,13 @@
             android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        
+        <ProgressBar
+            android:id="@+id/pb_loading_indicator"
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            android:layout_width="42dp"
+            android:layout_height="42dp" />
     </FrameLayout>
 
 </LinearLayout>
